--- a/infra/prometheus/development.yaml
+++ b/infra/prometheus/development.yaml
@@ -1,8 +1,8 @@
 # my global config
 global:
-  scrape_interval:     60s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 60s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 60s
+  scrape_timeout: 10s
+  evaluation_interval: 60s
 
 # Alertmanager configuration
 alerting:
@@ -17,19 +17,19 @@ rule_files:
   # - "second_rules.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
+    honor_timestamps: true
+    scheme: http
+    metrics_path: /metrics
     static_configs:
     - targets:
-        - 0.0.0.0:9090
+        - localhost:9090
 
   - job_name: 'user-api'
+    honor_timestamps: true
+    scheme: http
+    metrics_path: /metrics
     static_configs:
       - targets:
         - user_api:8081
