--- a/infra/kubernetes/stg/deployment-prometheus.yaml
+++ b/infra/kubernetes/stg/deployment-prometheus.yaml
@@ -46,31 +46,63 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: kube-state-metrics
+  name: loki
   namespace: monitoring
-  labels:
-    app: kube-state-metrics
 
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: kube-state-metrics
+      app: loki
 
   template:
     metadata:
       labels:
-        app: kube-state-metrics
+        app: loki
 
     spec:
       containers:
-        - name: kube-state-metrics
-          image: gcr.io/google_containers/kube-state-metrics:v1.8.0
+        - name: loki
+          image: grafana/loki:1.5.0
           ports:
-            - containerPort: 8080
+            - name: loki
+              containerPort: 3100
           resources:
-            requests:
-              cpu: 20m
             limits:
               cpu: 50m
               memory: 100Mi
+
+
+# ---
+
+# apiVersion: apps/v1
+# kind: Deployment
+
+# metadata:
+#   name: kube-state-metrics
+#   namespace: monitoring
+#   labels:
+#     app: kube-state-metrics
+
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: kube-state-metrics
+
+#   template:
+#     metadata:
+#       labels:
+#         app: kube-state-metrics
+
+#     spec:
+#       containers:
+#         - name: kube-state-metrics
+#           image: gcr.io/google_containers/kube-state-metrics:v1.8.0
+#           ports:
+#             - containerPort: 8080
+#           resources:
+#             requests:
+#               cpu: 20m
+#             limits:
+#               cpu: 50m
+#               memory: 100Mi
