--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,7 +59,7 @@ services:
     ports:
       - 8000:8080
     environment:
-      SWAGGER_JSON: /swagger.yam
+      SWAGGER_JSON: /swagger.yaml
 
   swagger_editor:
     container_name: presto_pay_swagger_editor
