--- a/infra/kubernetes/stg/default/service.yaml
+++ b/infra/kubernetes/stg/default/service.yaml
@@ -14,3 +14,22 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+
+metadata:
+  name: user-api-monitoring
+
+spec:
+  selector:
+    app: user-api
+
+  type: ClusterIP
+  ports:
+    - name: http
+      protocol: TCP
+      port: 8081
+      targetPort: 8081
