feat: Create log monitoring

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -107,15 +107,17 @@ services:
     networks:
       - loki
 
-  # fluentd:
-  #   container_name: presto_pay_fluentd
-  #   build:
-  #     context: ./infra/docker/monitoring/fluentd
-  #   volumes:
-  #     - ./infra/fluentd/development.conf:/fluentd/etc/fluent.conf:cached
-  #     - ./infra/fluentd/plugin/out_loki_dev.rb:/etc/fluent/plugin/out_loki.rb:cached
-  #   environment:
-  #     - FLUENT_CONF=/fluentd/etc/fluent.conf
+  fluent:
+    container_name: presto_pay_fluentd
+    build:
+      context: ./infra/docker/monitoring/fluentd
+    volumes:
+      - ./infra/fluentd/development.conf:/fluentd/etc/fluent.conf:cached
+      - ./infra/fluentd/plugin/out_loki_dev.rb:/etc/fluent/plugin/out_loki.rb:cached
+    environment:
+      - FLUENT_CONF=/fluentd/etc/fluent.conf
+    networks:
+      - loki
 
   # Management
   terraform:
