--- a/infra/kubernetes/stg/config/cluster-role.yaml
+++ b/infra/kubernetes/stg/config/cluster-role.yaml
@@ -2,7 +2,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 
 metadata:
-  name: prometheus
+  name: fluent
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
 
 rules:
   - apiGroups: [""]
@@ -37,14 +40,17 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 
 metadata:
-  name: prometheus
+  name: fluent
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
 
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: prometheus
+  name: fluent
 
 subjects:
   - kind: ServiceAccount
-    name: default
-    namespace: monitoring
+    name: fluent
+    namespace: default
