--- a/infra/envoy/development.yaml
+++ b/infra/envoy/development.yaml
@@ -62,6 +62,10 @@ static_resources:
                             prefix: "/v1/users/"
                           route:
                             cluster: user_service
+                        - match:
+                            prefix: "/v1/"
+                          route:
+                            cluster: calc_service
 
                 http_filters:
                   - name: envoy.cors
@@ -77,6 +81,24 @@ static_resources:
       hosts:
         - socket_address:
             address: user_api
+            port_value: 8080
+      health_checks:
+        - timeout: 1s
+          interval: 300s
+          interval_jitter: 1s
+          unhealthy_threshold: 3
+          healthy_threshold: 3
+          http_health_check:
+            path: "/health"
+    - name: calc_service
+      type: logical_dns
+      dns_lookup_family: v4_only
+      lb_policy: round_robin
+      connect_timeout: 15s
+      per_connection_buffer_limit_bytes: 32768 # 32KiB
+      hosts:
+        - socket_address:
+            address: calc_api
             port_value: 8080
       health_checks:
         - timeout: 1s
