feat: Update manifest

--- a/infra/kubernetes/stg/default/ingress.yaml
+++ b/infra/kubernetes/stg/default/ingress.yaml
@@ -20,3 +20,7 @@ spec:
             backend:
               serviceName: user-api
               servicePort: 80
+          - path: /v1/*
+            backend:
+              serviceName: calc-api
+              servicePort: 80
