feat: Update workflow

--- a/infra/kubernetes/Makefile
+++ b/infra/kubernetes/Makefile
@@ -4,6 +4,7 @@ CURRENT := $(shell date "+%Y%m%d-%H%M%S")
 # Common
 #############################
 .PHONY: get-external-ip
+
 get-external-ip:
 	kubectl get service envoy -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
 
@@ -11,6 +12,7 @@ get-external-ip:
 # Setup
 #############################
 .PHONY: generate-parivate-key generate-deployment
+
 generate-private-key:
 	openssl req -x509 -nodes \
 		-newkey rsa:2048 -days 365 \
@@ -23,6 +25,10 @@ generate-deployment:
 #############################
 # Update
 #############################
-.PHONY: update-deployment
+.PHONY: update-deployment update-deployment-all
+
 update-deployment:
-	kubectl patch deploy user-api -p "{\"spec\": {\"template\": {\"metadata\": {\"labels\": {\"date\": \"${CURRENT}\" }}}}}"
+	kubectl patch deploy ${APP_NAME} -p "{\"spec\": {\"template\": {\"metadata\": {\"labels\": {\"date\": \"${CURRENT}\" }}}}}"
+
+update-deployment-all:
+	$(MAKE) update-deployment APPNAME=user-api
