feat: Update workflow

--- a/.github/workflows/cd-calc-api.yaml
+++ b/.github/workflows/cd-calc-api.yaml
@@ -14,6 +14,7 @@ env:
   GCR_IMAGE_TAG: ${{ github.sha }}
   GKE_ZONE: ${{ secrets.STG_GKE_ZONE }}
   GKE_CLUSTER_NAME: ${{ secrets.STG_GKE_CLUSTER_NAME }}
+  GKE_DEPLOYMENT_NAME: calc-api
 
 jobs:
   deploy_for_stg:
@@ -84,4 +85,4 @@ jobs:
 
       - name: Udpate pod image
         working-directory: ./infra/kubernetes
-        run: make update-deployment APP_NAME=calc-api
+        run: make update-deployment APP_NAME=${GKE_DEPLOYMENT_NAME}
