fix: scale down api pods

--- a/infra/kubernetes/stg/default/deployment-calc-api.yaml
+++ b/infra/kubernetes/stg/default/deployment-calc-api.yaml
@@ -28,6 +28,9 @@ spec:
             - name: monitoring
               containerPort: 8081
           resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
             limits:
               cpu: 100m
               memory: 200Mi
