--- a/native/android/build.gradle
+++ b/native/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
   dependencies {
     classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha09"
-    classpath 'com.android.tools.build:gradle:3.6.3'
+    classpath 'com.android.tools.build:gradle:4.0.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
     classpath 'com.google.gms:google-services:4.3.3'
     // NOTE: Do not place your application dependencies here; they belong
@@ -21,7 +21,9 @@ allprojects {
   repositories {
     google()
     jcenter()
-
+    maven {
+      url "https://maven.google.com"
+    }
   }
 }
 
