--- a/docker-compose.swagger.yaml
+++ b/docker-compose.swagger.yaml
@@ -12,7 +12,7 @@ services:
     environment:
       SWAGGER_JSON: /swagger.yaml
 
-  admin:
+  console:
     container_name: presto_pay_admin
     build:
       context: ./infra/docker/web/admin
