--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -47,12 +47,16 @@ dependencies {
   implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
   androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
   // Testing Navigation
   androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
   implementation 'com.google.android.material:material:1.3.0-alpha01'
+
   //firebase
   implementation 'com.google.firebase:firebase-analytics:17.4.3'
   implementation 'com.google.firebase:firebase-auth:19.3.1'
+  implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.squareup.retrofit2:retrofit:2.5.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
