[ADD]Firebaseを用いたFacebook のlogin機能の実装

--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -57,8 +57,11 @@ dependencies {
   implementation 'com.google.firebase:firebase-auth:19.3.1'
   implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
-  //Twitter SDK
-  compile 'com.twitter.sdk.android:twitter-core:3.1.1'
+  //Twitter
+  implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+
+  //Facebook
+  implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.squareup.retrofit2:retrofit:2.5.0'
