--- a/infra/kubernetes/stg/default/ingress.yaml
+++ b/infra/kubernetes/stg/default/ingress.yaml
@@ -20,6 +20,14 @@ spec:
             backend:
               serviceName: user-api
               servicePort: 80
+          - path: /v1/auth
+            backend:
+              serviceName: user-api
+              servicePort: 80
+          - path: /v1/auth/*
+            backend:
+              serviceName: user-api
+              servicePort: 80
           - path: /v1/*
             backend:
               serviceName: calc-api
