--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -12,7 +12,7 @@ servers:
     description: 開発環境
 
 paths:
-  /users:
+  /auth:
     get:
       summary: 認証情報取得
       security:
@@ -20,6 +20,53 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/ShowProfile'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /auth/password:
+    patch:
+      summary: ユーザー パスワード編集
+      security:
+        - BearerAuth: []
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateUserPassword'
+      responses:
+        '200':
+          $ref: '#/components/responses/Empty'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /users:
+    get:
+      summary: ユーザー検索
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: query
+          name: username
+          schema:
+            type: string
+          required: true
+          description: ユーザー名
+        - in: query
+          name: after
+          schema:
+            type: string
+            format: uuid
+          description: WIP - ページネーションみたいなの作りたい
+      responses:
+        '200':
+          $ref: '#/components/responses/IndexUsers'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -79,25 +126,6 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
-        '500':
-          $ref: '#/components/responses/Unkown'
-
-  /users/password:
-    patch:
-      summary: ユーザー パスワード編集
-      security:
-        - BearerAuth: []
-      requestBody:
-        $ref: '#/components/requestBodies/UpdateUserPassword'
-      responses:
-        '200':
-          $ref: '#/components/responses/Empty'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '409':
-          $ref: '#/components/responses/Conflict'
         '500':
           $ref: '#/components/responses/Unkown'
 
@@ -405,6 +433,43 @@ components:
                 format: date-time
                 description: 更新日時
 
+    IndexUsers:
+      description: ユーザー一覧取得APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              users:
+                type: array
+                description: ユーザー一覧
+                items:
+                  properties:
+                    id:
+                      type: string
+                      format: uuid
+                      description: ユーザーID
+                    name:
+                      type: string
+                      description: 表示名
+                    username:
+                      type: string
+                      description: ユーザー名
+                    email:
+                      type: string
+                      format: email
+                      description: メールアドレス
+                    thumbnail:
+                      type: string
+                      description: サムネイルURL
+                    groupIds:
+                      type: array
+                      description: グループID一覧
+                      items:
+                        type: string
+                        format: uuid
+
+
     ShowUser:
       description: ユーザー情報取得APIのレスポンス
       content:
@@ -435,14 +500,6 @@ components:
                 items:
                   type: string
                   format: uuid
-              createdAt:
-                type: string
-                format: date-time
-                description: 作成日時
-              updatedAt:
-                type: string
-                format: date-time
-                description: 更新日時
 
     CreateUser:
       description: ユーザー登録APIのレスポンス
