--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -78,6 +78,25 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
+  /auth/friends:
+    post:
+      summary: 友達追加
+      security:
+        - BearerAuth: []
+      requestBody:
+        $ref: '#/components/requestBodies/AddFriend'
+      responses:
+        '200':
+          $ref: '#/components/responses/AddFriend'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
   /users:
     get:
       summary: ユーザー検索
@@ -303,6 +322,21 @@ components:
               - password
               - passwordConfirmation
 
+    AddFriend:
+      description: 友達追加APIのリクエスト
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              userId:
+                type: string
+                format: uuid
+                description: ユーザーID
+            required:
+              - userId
+
     UniqueCheckUserEmail:
       description: ユーザー メールアドレスユニーク検証APIのリクエスト
       required: true
@@ -436,6 +470,12 @@ components:
                 items:
                   type: string
                   format: uuid
+              friendIds:
+                type: array
+                description: 友達ユーザーID一覧
+                items:
+                  type: string
+                  format: uuid
               createdAt:
                 type: string
                 format: date-time
@@ -543,6 +583,12 @@ components:
                 items:
                   type: string
                   format: uuid
+              friendIds:
+                type: array
+                description: 友達ユーザーID一覧
+                items:
+                  type: string
+                  format: uuid
               createdAt:
                 type: string
                 format: date-time
@@ -579,6 +625,57 @@ components:
               groupIds:
                 type: array
                 description: グループID一覧
+                items:
+                  type: string
+                  format: uuid
+              friendIds:
+                type: array
+                description: 友達ユーザーID一覧
+                items:
+                  type: string
+                  format: uuid
+              createdAt:
+                type: string
+                format: date-time
+                description: 作成日時
+              updatedAt:
+                type: string
+                format: date-time
+                description: 更新日時
+
+    AddFriend:
+      description: 友達追加APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                description: ユーザーID
+              name:
+                type: string
+                description: 表示名
+              username:
+                type: string
+                description: ユーザー名
+              email:
+                type: string
+                format: email
+                description: メールアドレス
+              thumbnail:
+                type: string
+                description: サムネイルURL
+              groupIds:
+                type: array
+                description: グループID一覧
+                items:
+                  type: string
+                  format: uuid
+              friendIds:
+                type: array
+                description: 友達ユーザーID一覧
                 items:
                   type: string
                   format: uuid
