docs: Update swagger

--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -115,7 +115,7 @@ paths:
       security:
         - BearerAuth: []
       parameters:
-        - in: query
+        - in: path
           name: userId
           schema:
             type: string
