--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -37,6 +37,7 @@ android {
 
 dependencies {
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
   def nav_version = "2.3.0-alpha05"
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -70,4 +71,20 @@ dependencies {
   implementation group: 'org.json', name: 'json', version: '20180813'
   implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
   testImplementation 'junit:junit:4.12'
+
+  // Moshi
+  implementation "com.squareup.moshi:moshi:1.8.0"
+  implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+
+  // Retrofit with Moshi Converter
+  implementation "com.squareup.retrofit2:retrofit:2.5.0"
+  implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+  // Coroutines
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+
+  // Retrofit Coroutines Support
+  implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
 }
