--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -87,4 +87,5 @@ dependencies {
   // Retrofit Coroutines Support
   implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
+  implementation 'com.squareup.picasso:picasso:2.5.2'
 }
