--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -88,4 +88,5 @@ dependencies {
   implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
   implementation 'com.squareup.picasso:picasso:2.5.2'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 }
