--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -38,7 +38,9 @@ android {
 dependencies {
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-  def nav_version = "2.3.0-alpha05"
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    def nav_version = "2.3.0-alpha05"
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'androidx.appcompat:appcompat:1.1.0'
