--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
   implementation 'com.google.firebase:firebase-analytics:17.4.3'
   implementation 'com.google.firebase:firebase-auth:19.3.1'
   implementation 'com.google.android.gms:play-services-auth:18.0.0'
+  implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
+  implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
 
   //Twitter SDK
   implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
